Captions plugin updated to display correctly and work with the SpringRoll.io demo page, added captions scaling so they match the game dimensions

--- a/templates/Springroll.html
+++ b/templates/Springroll.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-  <div id="frame">
-    <div id="content"></div>
-    <div id="caption"></div>
-  </div>
+
+    <div id="content">
+      <div id="captions" style="display: block;"></div>
+    </div>
 </body>
 
 </html>
