--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,1 +1,144 @@
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+html,
+body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: transparent;
+    /* Align content to the center */
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: column; 
+}
+
+#content {
+    overflow: hidden;
+    position: relative;
+}
+
+/**
+ * The captions styles, this work with the container
+ * to allow for the managed display settings of
+ * the output captions
+ */
+body {
+    font-size: 2em;
+}
+
+@media (max-width: 2048px) {
+    body {
+        font-size: 1.9em;
+    }
+}
+
+@media (max-width: 1920px) {
+    body {
+        font-size: 1.8em;
+    }
+}
+
+@media (max-width: 1792px) {
+    body {
+        font-size: 1.7em;
+    }
+}
+
+@media (max-width: 1664px) {
+    body {
+        font-size: 1.6em;
+    }
+}
+
+@media (max-width: 1536px) {
+    body {
+        font-size: 1.5em;
+    }
+}
+
+@media (max-width: 1408px) {
+    body {
+        font-size: 1.4em;
+    }
+}
+
+@media (max-width: 1280px) {
+    body {
+        font-size: 1.3em;
+    }
+}
+
+@media (max-width: 1152px) {
+    body {
+        font-size: 1.2em;
+    }
+}
+
+@media (max-width: 1024px) {
+    body {
+        font-size: 1.1em;
+    }
+}
+
+@media (max-width: 896px) {
+    body {
+        font-size: 1em;
+    }
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 0.9em;
+    }
+}
+
+@media (max-width: 640px) {
+    body {
+        font-size: 0.8em;
+    }
+}
+
+@media (max-width: 512px) {
+    body {
+        font-size: 0.7em;
+    }
+}
+
+@media (max-width: 384px) {
+    body {
+        font-size: 0.6em;
+    }
+}
+
+@media (max-width: 256px) {
+    body {
+        font-size: 0.5em;
+    }
+}
+
+#captions {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    text-align: center;
+    padding: 0 5%;
+    line-height: 2;
+    pointer-events: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
+    background: rgba(0, 0, 0, .5);
+    color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+}
